CHANGES
*******

1.0 (unreleased)
================

- Bugfix in sdist_compile: compile resources in *all* packages contained in a
  distribution.


1.0a (2013-04-18)
=================

- Add support for compilers and minifiers.

  By default fanstatic ships with the sass/less and coffeescript compilers
  and mincss/minjs/google closure minifiers.

0.16 (2012-12-10)
=================

- Update Bundle object to share an API for the Resource one.

- Update injector to handle HTML pages that doesn't explicit set a
  charset in their headers.

0.15 (2012-11-08)
=================

- Add "default" argument to Slot to specify a resource which will be filled
  in if there is no other resource specified in need(). Thanks to nilo.

- Ensure published bundles carry the correct Content-Type header. Previously,
  all bundles were delivered with `text/html`. Thanks to David Beitey.


0.14 (2012-10-30)
=================

- Alex Grönholm added python3 and pypy support.

- Using tox to test on python2.6/2.7/3.2/3.3/pypy.

- Mirroring the bitbucket repo to github in order to run tests on travis-ci:

  https://travis-ci.org/#!/fanstatic/fanstatic

0.14a (2012-10-07)
==================

- Removed the dependency on Paste, replaced with webob.static.

- The publisher no longer sends out etags, which seems like a good
  idea. The `Yahoo best practices for speeding up web sites <http://developer.yahoo.com/performance/rules.html>`_
  say:

    If you're not taking advantage of the flexible validation model that
    ETags provide, it's better to just remove the ETag altogether.

- Updated package setup to be compatible with running
  ``python setup.py test``.

- Added tox setup for testing across python versions.

0.13.3 (2012-09-12)
===================

- No longer use WebOb's wsgify decorator in both the injector and
  delegator middlewares, as it has issues handling parent application
  WSGI response (https://github.com/Pylons/webob/issues/74).

0.13.2 (2012-08-23)
===================
